# RealityScanner

./: .gitignore  CMakeLists.txt  README.md  auto_build.ps1
.github/workflows/: build.yml
cmake_bin/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake_bin/doc/cmake/html/_static/: documentation_options.js
cmake_bin/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  (+88 more)
cmake_bin/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake_bin/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_TYPE.html  CMAKE_CROSSCOMPILING_EMULATOR.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FRAMEWORK_PATH.html  (+52 more)
src/: app.cpp  app.h  fa_solid_900.h  main.cpp  scanner.cpp  scanner.h  utils.cpp  utils.h  xui_api.cpp  xui_api.h
(+1814 files in other folders)
